CHANGELOG for Fall of Eden
--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.3l
------------
* Made expToLevel more consistent with save/load.
* Fera sex fix.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3k4
-------------
* Counter attack status effect implemented (Set trap ability).
* Implemented and activated Ranger job.
* Added the odd shop to Rigard shopping street. You can buy some strapons there.
* Added an armor shop to Rigard shopping street.
* Added a weapon shop to Rigard shopping street.
* Fixed some bullshit enemy AI. Ability use should actually draw SP now. Might have caused some bugs, report if the game crashes mid-fight.
* Kiai anal fix.
* Fixed a few bugs in feline scenes.
* Fixed a few bugs in equine scenes.
* Fixed a bug in fera scenes.
* Fixed a bug in elven nectar scene.
* Fixed some Cale typos.
* Fixed exp to level for Terry and Miranda.
* Added a print of total items kept for alchemy recipes (good for checking how many you can make, or what you are missing).
* Nasty Miranda won't ask the player to sleep over anymore.

Version 0.3k3
-------------
* Fixed a few Cale related bugs.
* Fixed a Cale bug that would break the cheat Cavalcade fuck if you were pure female.
* Fixed an error in lust gain that was causing unintentional massive lust spikes.
* Fixed an error where nasty Miranda wouldn't let you through the main gate, even if you had a pass.
* Fixed inn companion prompt.
* Added a Bleed status effect. Any form of healing will remove it.
* Fixed an error in job stat growth. Lib and Cha were swapped.

Version 0.3k2
-------------
* Fixing various bugs and missing tags in Cale.
* Fixed a but in Kiakai's anal catch scene.
* Tweaked the output of Cavalcade a bit.
* Better pics for Kiakai.