@@ -9,6 +9,7 @@ Version 0.3l
 ------------
 * Made expToLevel more consistent with save/load.
 * Fera sex fix.
+* Possible fix for Ranger job.
 
 --------------------------------------------
              PREVIOUS VERSIONS
